# HyComm

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindModules.cmake
cmake/Modules/: FindIceoryx2.cmake  FindUnorderedDense.cmake
examples/: CMakeLists.txt
examples/DaemonClient/: CMakeLists.txt  main.cpp
examples/DaemonConnect/: CMakeLists.txt  main.cpp
include/HyComm/: Manager.hpp
include/HyComm/Builders/: SerialBuilder.hpp
include/HyComm/Common/: Error.hpp  FdTransfer.hpp
include/HyComm/Configs/: EchoConfig.hpp  SerialConfig.hpp
include/HyComm/Detail/: GenericInterface.hpp  InterfaceHandle.hpp  InterfaceState.hpp  Session.hpp  UringManager.hpp
include/HyComm/Interfaces/: EchoInterface.hpp  SerialInterface.hpp
include/HyComm/IpcShared/: Concepts.hpp  EchoRequest.hpp  Error.hpp  Payload.hpp  Request.hpp  Response.hpp  SerialRequest.hpp
include/HyComm/Protocols/: EchoTraits.hpp  SerialTraits.hpp
src/: CMakeLists.txt
src/Builders/: CMakeLists.txt  SerialBuilder.cpp
src/Common/: CMakeLists.txt  FdTransfer.cpp
src/Daemon/: CMakeLists.txt
src/Daemon/src/: DaemonNode.cpp  DaemonNode.hpp  InterfaceManager.cpp  InterfaceManager.hpp  main.cpp
src/Daemon/src/Backends/: EchoBackend.cpp  EchoBackend.hpp  IInterfaceBackend.hpp  SerialBackend.cpp  SerialBackend.hpp
src/Detail/: CMakeLists.txt  Session.cpp  UringManager.cpp
src/IpcShared/: CMakeLists.txt
src/Protocols/: CMakeLists.txt  SerialTraits.cpp
tests/: CMakeLists.txt  test_echo_interface.cpp  test_iceoryx_basic.cpp
